--- a/analyses/climate/Climate Data Analysis.Rmd
+++ b/analyses/climate/Climate Data Analysis.Rmd
@@ -45,6 +45,8 @@ Below we compare models using canopy symptoms as the response variable
     + 30yr normals 1991-2020 (265 variables)
     + last decade  2011-2020 (265 variables)
     
+
+    
 ```{r}
 data <- read.csv("./data/observations-223649.csv")
 ```
@@ -129,6 +131,8 @@ We also need to remove other response variables like "field.percent.canopy.affec
 
 There are also a number of factors that should probably be removed because they may be biasing the data. For example, only trees with the 'other factor' question may only be answered for unhealthy trees. We need to think about this a bit more. 
 
+First remove iNat factors not useful as explanatory variables (e.g. observed_on)
+
 ```{r}
 combo.filtered <- combo %>% select(-c("field.optional...site.type",
                                       "field.optional...site.hydrology",
@@ -191,6 +195,13 @@ combo.filtered <- combo %>% select(-c("field.optional...site.type",
  ,"field.optional...timing.of.symptoms.estimate"                                           
 , "field.optional...estimated.time.spent.to.make.this.observation....of.minutes."          
 , "field.optional...can.we.follow.up.with.you."
+))
+# combo.filtered <- combo.filtered[c(45,50:59,68:332,337:341,355:394,396:503,510:774)] 
+```
+
+Then, remove specific climate variables not useful as explanatory variables (e.g. norm_Latitutde)
+```{r}
+combo.filtered <- combo.filtered %>% select(-c(
 ,"X" 
 ,"Latitude"                                    
 ,"Longitude"
@@ -198,10 +209,9 @@ combo.filtered <- combo %>% select(-c("field.optional...site.type",
 ,"norm_X"                                                                                   
 ,"norm_Latitude"                                                                            
 ,"norm_Longitude"                                                                           
-,"norm_Elevation"
-))
-# combo.filtered <- combo.filtered[c(45,50:59,68:332,337:341,355:394,396:503,510:774)] 
+,"norm_Elevation"))
 ```
+
 
 Remove variables with variables that have near zero standard deviations (entire column is same value)
 
@@ -240,12 +250,7 @@ binary %>% group_by(field.tree.canopy.symptoms) %>% count()
   + build full model using binary response grouping variable
     + binary response 
   + refine model to remove redundant explanatory variables
-    
-* Approach notes
-  + We need to train/test models to calculate correctly predicted presences (inverse of commission errors) and correctly predicted absences (inverse of omission errors)
-  + we may want to evaluate the climate parameters seperately
-    + we lose >300 observations when we filter out data to only include those with soil
-    + what happens if we build a model without soils data (without filtering to WA and OR)
+  
 
 # Models
 
