--- a/data-wrangle/soils/Soil Data Extraction.Rmd
+++ b/data-wrangle/soils/Soil Data Extraction.Rmd
@@ -28,7 +28,10 @@ Below are the methods I used to extract the soils data for the GPS points.
   * Download gSSURGO data from the [USDA Geospatial Data Gateway](https://gdg.sc.egov.usda.gov/GDGHome_DirectDownLoad.aspx)
     + click on the link to 'Soils' - Redirects you to a the [NRCS Box Folder](https://nrcs.app.box.com/v/soils)
     + I downloaded OR and WA data from the folder 'October 2021 gSSURGO by State'.
-    + Working with gSSURGO data is kind of ackward because you have to join tables of interest to the base raster file before you can map those table variables.
+      + Note the zip files for each state was ~500MB
+
+
+Working with gSSURGO data is kind of awkward because you have to join tables of interest to the base raster file before you can map those table variables.
   
   
 ## Wrangle Shapefiles in ArcGIS Pro  
@@ -36,16 +39,22 @@ Below are the methods I used to extract the soils data for the GPS points.
 ### Add Data Layers
 
   * Add Data
-       + Add MapunitRaster_10m for each state, rename content based on state
-         + Note ArcGIS Pro was doing a weird thing where after opening gps csv, it wouldn't recognize lat/long columns the next time I tried to add it as a layer.
-       + Add GPS points wrangled from data downloaded from iNaturalist project
+      + Add MapunitRaster_10m for each state, rename content based on state
+        + In the Map Tab of ArcGIS Pro, click 'add data', browse to downloaded folder (geodatabase - .gbd), find raster file in list
+          + Note I had trouble finding it in windows explorer on the second attempt to complete these instructions
+        + Add CSV with iNat GPS - Add GPS points wrangled from data downloaded from iNaturalist project
+          + Note ArcGIS Pro was doing a weird thing where after opening gps csv, it wouldn't recognize lat/long columns the next time I tried to add it as a layer.
+            + Copy original GPS file as a new file specifically for use in ARCGIS
+          + If you add csv as table with 'add data' button in Map Tab of ArcGIS Pro, you can then right click the layer and select 'display XY data'
+            + It will add a layer with your points
           
 ### Subset Data        
      
   * Subset Data (needed to avoid insufficient memory error)
       + Add soils polygons for each state MUPOLYGON
+        + Again, click 'add data' browse to .gdb and then find MUPolygon in list. 
         + Rename polygon for each state (e.g. WA MUPolygon)
-      + Use select by location for Tree GPS points
+      + Use select by location for Tree GPS points (find tool in Map Tab of ArcGIS Pro)
         + Input features - gps.csv
         + Relationship - Intersect
         + Selecting Features - WA MUPOLYGON
@@ -61,10 +70,11 @@ Below are the methods I used to extract the soils data for the GPS points.
         + right click raster -> select Joins and relates -> Add Join
           + Input: OR MapunitRaster_10m
           + Input Join Field: MUKEY
-          + Join Table: OR Mapunit Aggregated Attribute
+          + Join Table: OR Mapunit Aggregated Attribute (muaggatt)
           + Join Table Field: MUKEY
       + Repeat with Component TAble
-          + This time use Input Join Field 'MUPOLYGON.MUKEY'
+          + This time use Input Join Field 'MUPOLYGON.MUKEY or VAT_OR MApunitRaster_10m.MUKEY'
+          + Might not have MUKEY file for join field, instead use 'Map Unit Key'
       + (Optional) Not recommended though -too much data - Repeat with Chorizon Table
           + Use Component.cokey and Component Key as Join Fields
       + (Optional) Note the same process can be followed for adding table data to the shape file (MUPOLYGON).
